tdf#92243 Read menu highlight text colour correctly from GTK theme

Change-Id: Iade050c8504a1cc65b5ac345141da32898e7ebff